--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=studentManagement
+spring.datasource.url=jdbc:mysql://localhost:3306/studentmanagementsystem
+spring.datasource.username=root
+spring.datasource.password=wagashi55@jn
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+mybatis.configuration.map-underscore-to-camel-case=true
+
