--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=wagashi55@jn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
+# MyBatisの設定
 mybatis.configuration.map-underscore-to-camel-case=true
-
+mybatis.mapper-locations=classpath*:/mapper/*.xml
