--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.4.0'
 	//Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	//OpenAPI Generator
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+
 	//便利機能アパッチコモンズを追加  24.12.05
 	implementation 'org.apache.commons:commons-lang3:3.17.0'
 
@@ -51,6 +54,3 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-//プラグイン　タイムリーフの設定　IntelliJのHP参照
-//implementation('org.thymeleaf:thymeleaf:3.0.12.RELEASE')
-
