--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # MyBatisの設定
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath*:/mapper/*.xml
+springdoc.cache.disabled=true
+
