Junitを導入しServiceクラスの単体テストを実装

--- a/build.gradle
+++ b/build.gradle
@@ -54,3 +54,10 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+test {
+	reports {
+		html.required.set(true)
+		html.outputLocation.set(layout.buildDirectory.dir("reports/tests"))
+	}
+}
+
